--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,8 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".SocialMedia"></activity>
-        <activity android:name=".AboutPage" />
+        <activity android:name=".SocialMedia"
+                    android:parentActivityName=".MainActivity"></activity>
+        <activity android:name=".AboutPage"
+            android:parentActivityName=".MainActivity"/>
         <activity
             android:name=".MainActivity"
             android:theme="@style/SplashTheme">
