--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="edu.sp.p1804292.mapp_ca2">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,10 +12,14 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".SocialMedia"
-                    android:parentActivityName=".MainActivity"></activity>
-        <activity android:name=".AboutPage"
-            android:parentActivityName=".MainActivity"/>
+        <activity android:name=".Events"
+            android:parentActivityName=".MainActivity"></activity>
+        <activity
+            android:name=".SocialMedia"
+            android:parentActivityName=".MainActivity" />
+        <activity
+            android:name=".AboutPage"
+            android:parentActivityName=".MainActivity" />
         <activity
             android:name=".MainActivity"
             android:theme="@style/SplashTheme">
