--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,8 +12,18 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Events"
-            android:parentActivityName=".MainActivity"></activity>
+        <activity
+            android:name=".Talks"
+            android:parentActivityName=".Events" />
+        <activity
+            android:name=".AGM"
+            android:parentActivityName=".Events" />
+        <activity
+            android:name=".Camps"
+            android:parentActivityName=".Events" />
+        <activity
+            android:name=".Events"
+            android:parentActivityName=".MainActivity" />
         <activity
             android:name=".SocialMedia"
             android:parentActivityName=".MainActivity" />
